@@ -1,25 +1,24 @@
 package ru.job4j.collection;
 
-import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.*;
 
 public class ConvertList2ArrayTest {
 
     @Test
     public void when7ElementsThen9() {
         int[][] result = ConvertList2Array.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3
+                List.of(1, 2, 3, 4, 5, 6, 7), 3
         );
         int[][] expected = {
                 {1, 2, 3},
                 {4, 5, 6},
                 {7, 0, 0}
         };
-        Assert.assertThat(result, is(expected));
+        assertThat(result, is(expected));
     }
 }
