@@ -3,11 +3,10 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.*;
+import static org.hamcrest.MatcherAssert.assertThat;
 
 public class ConvertListTest {
 
@@ -16,7 +15,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expected = Arrays.asList(1, 2, 3);
+        List<Integer> expected = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expected));
     }
 }
