@@ -13,12 +13,12 @@ public class NotifyAccountTest {
 
     @Test
     public void whenNoRepeatsThenSource() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3232f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3232f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -28,14 +28,14 @@ public class NotifyAccountTest {
 
     @Test
     public void whenRepeatsThenModified() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Ivan Ivanov", "eDer3232f"),
                 new Account("142", "Ivan Ivanov", "0rBnMm876"),
                 new Account("123", "Ivan Ivanov", "Bvg690RfdD"),
                 new Account("532", "Ivan Ivanov", "GhJu0043f")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Ivan Ivanov", "eDer3232f"),
                         new Account("142", "Ivan Ivanov", "0rBnMm876"),
                         new Account("532", "Ivan Ivanov", "GhJu0043f")
